adicionado um parágrafo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<title>Document</title>
 </head>
 <body>
+
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod debitis animi voluptate labore tenetur expedita, voluptatem laborum porro enim iure et nesciunt dolor a fugit sapiente maxime ratione officiis. Similique.
+</p>
 	
 </body>
 </html>
