--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
+	<style>
+	p {
+		font: 12px/1.5em 'Lato', Arial, sans-serif;
+		color: #555;
+	}
+	</style>
 </head>
 <body>
 
